--- a/index.html
+++ b/index.html
@@ -7,23 +7,28 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-   <main>
-       <h1>Tic Tac Toe</h1>
     <div id="container">
-        <div id="game">
-            <button id="box">x</button>
-            <button id="box"></button>
-            <button id="box"></button>
-            <button id="box"></button>
-            <button id="box"></button>
-            <button id="box"></button>
-            <button id="box"></button>
-            <button id="box"></button>
-            <button id="box"></button>
+        <div id="calculator">
+            <div id="screen"></div>
+            <div id="numbers">
+                <button id="btn">*</button>
+                <button id="btn"></button>
+                <button id="btn"></button>
+                <button id="btn"></button>
+                <button id="btn"></button>
+                <button id="btn"></button>
+                <button id="btn"></button>
+                <button id="btn"></button>
+                <button id="btn"></button>
+                <button id="btn"></button>
+                <button id="btn"></button>
+                <button id="btn"></button>
+                <button id="btn"></button>
+                <button id="btn"></button>
+                <button id="btn"></button>
+                <button id="btn"></button>
+            </div>
         </div>
     </div>
-    <button id="resetBtn">Reset</button>
-   </main>
-   <script src="mind.js"></script>
 </body>
 </html>
