--- a/index.html
+++ b/index.html
@@ -11,24 +11,28 @@
         <div id="calculator">
             <div id="screen"></div>
             <div id="numbers">
-                <button id="btn">*</button>
-                <button id="btn"></button>
-                <button id="btn"></button>
-                <button id="btn"></button>
-                <button id="btn"></button>
-                <button id="btn"></button>
-                <button id="btn"></button>
-                <button id="btn"></button>
-                <button id="btn"></button>
-                <button id="btn"></button>
-                <button id="btn"></button>
-                <button id="btn"></button>
-                <button id="btn"></button>
-                <button id="btn"></button>
-                <button id="btn"></button>
-                <button id="btn"></button>
+                <button id="btn" onclick="keyfun(4)">4</button>
+                <button id="btn" onclick="keyfun(6)">6</button>
+                <button id="btn" onclick="keyfun(2)">2</button>
+                <button id="btn" onclick="keyfun('*')">*</button>
+
+                <button id="btn"onclick="keyfun(5)">5</button>
+                <button id="btn"onclick="keyfun(8)">8</button>
+                <button id="btn"onclick="keyfun(3)">3</button>
+                <button id="btn"onclick="keyfun('+')">+</button>
+
+                <button id="btn"onclick="keyfun(9)">9</button>
+                <button id="btn"onclick="keyfun(1)">1</button>
+                <button id="btn"onclick="keyfun(7)">7</button>
+                <button id="btn"onclick="keyfun('-')">-</button>
+
+                <button id="btn" onclick="keyfun(0)">0</button>
+                <button id="btn" onclick="keyfun('.')">.</button>
+                <button id="btn" onclick="cal()">=</button>
+                <button id="btn" onclick="keyfun('%')">%</button>
             </div>
         </div>
     </div>
+    <script src="mind.js"></script>
 </body>
 </html>
